fixed picture out of bound

--- a/styles/howto.css
+++ b/styles/howto.css
@@ -51,3 +51,8 @@ li{
         font-size: 15px;
     }
 }
+@media screen and (max-width: 500px){
+    div img{
+        width: 300px;
+    }
+}
